# dataspray-package/src/main/java/io/dataspray/cdk/api/ApiStack.java
@@ -25,6 +25,7 @@ package io.dataspray.cdk.api;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
+import com.google.common.base.Enums;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
@@ -38,6 +39,7 @@ import io.dataspray.cdk.template.FunctionStack;
 import io.dataspray.common.DeployEnvironment;
 import io.dataspray.store.ApiAccessStore.UsageKeyType;
 import io.dataspray.store.impl.DynamoApiGatewayApiAccessStore;
+import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NonNull;
 import lombok.SneakyThrows;
@@ -383,17 +385,13 @@ public class ApiStack extends FunctionStack {
                         // Let Api Gateway know to use this particular lambda function
                         // Docs https://docs.aws.amazon.com/apigateway/latest/developerguide/api-gateway-swagger-extensions-integration.html
                         // Async invocation https://docs.aws.amazon.com/apigateway/latest/developerguide/set-up-lambda-integration-async.html
-                        boolean isAsync = Boolean.TRUE.equals(methodData.getOrDefault("x-async", false));
+                        XAsync xAsync = Enums.getIfPresent(XAsync.class, methodData.getOrDefault("x-async", XAsync.disabled.name()).toString()).or(XAsync.disabled);
                         methodData.put("x-amazon-apigateway-integration", ImmutableMap.builder()
                                 .put("httpMethod", "POST")
                                 .put("uri", "arn:aws:apigateway:" + getRegion() + ":lambda:path/2015-03-31/functions/arn:aws:lambda:" + getRegion() + ":" + getAccount() + ":function:" + endpointFunction.getApiFunction().getFunctionName() + ":" + getAuthorizerFunction().getAliasName() + "/invocations")
                                 .put("responses", ImmutableMap.of(
-                                        // In async mode, we are using proxy integration with async invocation which is not officially supported by API Gateway that causes
-                                        // it to return a 502 as it doesn't know how to interpret the async invocation response of 202 ACCEPTED.
-                                        // Here we explicitly map any 502 to 202 even though there could be other reasons why it fails with 502.
-                                        // https://docs.aws.amazon.com/apigateway/latest/api/API_GatewayResponse.html
-                                        isAsync ? "DEFAULT_5XX" : "default", ImmutableMap.of(
-                                                "statusCode", isAsync ? "202" : "200",
+                                        "default", ImmutableMap.of(
+                                                "statusCode", "200",
                                                 "responseParameters", ImmutableMap.of(
                                                         // Add cors support
                                                         // Docs https://docs.aws.amazon.com/apigateway/latest/developerguide/enable-cors-for-resource-using-swagger-importer-tool.html
@@ -402,14 +400,12 @@ public class ApiStack extends FunctionStack {
                                                         "method.response.header.Access-Control-Allow-Origin", "'" + endpointFunction.getCorsAllowOrigins(this) + "'"),
                                                 "responseTemplates", ImmutableMap.of(
                                                         "application/json", "{}"))))
-                                .put("requestParameters", ImmutableMap.of("integration.request.header.X-Amz-Invocation-Type",
-                                        isAsync ? "'Event'" : "' RequestResponse'"))
+                                .put("requestParameters", ImmutableMap.of("integration.request.header.X-Amz-Invocation-Type", xAsync.getHeaderValue()))
                                 .put("passthroughBehavior", "when_no_match")
                                 .put("contentHandling", "CONVERT_TO_TEXT")
                                 // For async, we should be using "aws" type here, but then we'd have to pass along all the proxied
                                 // information. Instead always proxy, but now the response from an async invocation will be
-                                // 204 ACCEPTED which API Gateway will choke and return a 502. We fix this above by forcing
-                                // a response of 204 above.
+                                // 204 ACCEPTED which API Gateway will choke and return a 502. Clients have to handle this themselves.
                                 .put("type", "aws_proxy")
                                 .build());
                     }
@@ -488,5 +484,17 @@ public class ApiStack extends FunctionStack {
         DnsStack dnsStack;
         @NonNull
         SingleTableStack singleTableStack;
+    }
+
+    @AllArgsConstructor
+    @Getter
+    private enum XAsync {
+        /** Always synchronous */
+        disabled("'Event'"),
+        /** Client can choose */
+        optional("method.request.header.InvocationType"),
+        /** Always asynchronous */
+        enabled("'RequestResponse'");
+        private final String headerValue;
     }
 }
